# UselessImGui

./: CMakeLists.txt  CREDITS.txt  Doxyfile  README.md
src/: CMakeLists.txt  UselessImGUI.gej  api.cpp  api.gml  hook.cpp  imgui_impl_dx8.cpp
